[gd_scene load_steps=11 format=3 uid="uid://c2micorhbl5jf"]

[ext_resource type="Script" path="res://entity/tower/person_on_base/TangThree/tang_three.gd" id="1_dnhvx"]
[ext_resource type="Texture2D" uid="uid://bimikwsvi067y" path="res://entity/tower/person_on_base/TangThree/唐三藏正面.png" id="1_p0eli"]
[ext_resource type="PackedScene" uid="uid://xdpw4663si8y" path="res://entity/tower/person_on_base/human_settle_com/settle_area.tscn" id="2_r08kb"]
[ext_resource type="Texture2D" uid="uid://on8pe3yfg8vh" path="res://entity/tower/person_on_base/TangThree/唐三藏背面.png" id="3_308sa"]

[sub_resource type="Animation" id="Animation_8kc77"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gk3wi"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 5, 6, 7, 6, 5, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.847059, 0, 0.109804, 1), Color(1, 1, 1, 1), Color(0.705882, 0.690196, 0.027451, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"update_direction"
}]
}

[sub_resource type="Animation" id="Animation_iswh7"]
resource_name = "idle"
length = 1.2
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"update_direction"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0neg3"]
_data = {
"RESET": SubResource("Animation_8kc77"),
"attack": SubResource("Animation_gk3wi"),
"idle": SubResource("Animation_iswh7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_a400p"]
radius = 22.1359

[sub_resource type="CircleShape2D" id="CircleShape2D_5qnil"]
radius = 399.0

[node name="TangThree" type="Node2D" node_paths=PackedStringArray("sprite")]
script = ExtResource("1_dnhvx")
first_attack_interval = 1.0
attack_interval = 1.5
sprite = NodePath("Sprite")
back_sprite = ExtResource("3_308sa")
front_sprite = ExtResource("1_p0eli")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_p0eli")
offset = Vector2(-2, -14)
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0neg3")
}

[node name="SettleArea" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("2_r08kb")]
parent = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SettleArea"]
shape = SubResource("CircleShape2D_a400p")

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("CircleShape2D_5qnil")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
